--- a/main.html
+++ b/main.html
@@ -4,11 +4,70 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	
 </head>
 
 <body>
+	<form method="post">
+<label for="first-name-input" >First Name
+	<br>
+	<input type="text" id="first-name-input" required />
+</label>
+
+<label for="last-name-input" >Last Name
+	<br>
+	<input type="text" id="last-name-input" required />
+</label>
+
+<label for="email-input" >Email Address
+	<br>
+	<input type="email" id="email-input" required />
+</label>
+
+<label for="college-input"> College  
+	<br>
+	<input type="text" id="college-input" required />
+</label>
+
+<label for="graduation_year"> College  
+	<br>
+	<select>
+		<option>2020</option>
+		<option>2021</option>
+		<option>2022</option>
+		<option>2023</option>
+	</select>
+</label>
+
+
+
+<label for="roll-no-input" >Roll No.
+	<br>
+	<input type="number" id="roll-no-input" required />
+</label>
+
+<label for="conditions-checkbox"> 
+	<input type="checkbox" id="conditions-checkbox" required />
+Agree to terms and conditions
+</label>
+<br/>
+<label for="submit" >
+	<button id="submit">Submit form</button>
+	
+	
+</label>
+
+
+	</form>
+
+
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
+	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 </script>
 
 </body>
